--- a/src/assets/config-template-https.json
+++ b/src/assets/config-template-https.json
@@ -14,7 +14,8 @@
       "protocol": "https",
       "host": "localhost",
       "port": 8000,
-      "debug": false
+      "debug": false,
+      "useStreams": false
     },
     {
       "type": "ocpp",
